--- a/usage/index.html
+++ b/usage/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Kubernetes - Dolos</title>
+        <title>Usage - Dolos</title>
 
 
         <!-- Custom HTML head -->
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../installation/index.html"><strong aria-hidden="true">2.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../installation/binary_release.html"><strong aria-hidden="true">2.1.</strong> Binary Release</a></li><li class="chapter-item expanded "><a href="../installation/from_source.html"><strong aria-hidden="true">2.2.</strong> From Source</a></li><li class="chapter-item expanded "><a href="../installation/docker.html"><strong aria-hidden="true">2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../installation/kubernetes.html" class="active"><strong aria-hidden="true">2.4.</strong> Kubernetes</a></li></ol></li><li class="chapter-item expanded "><a href="../usage/index.html"><strong aria-hidden="true">3.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../usage/client_endpoint.html"><strong aria-hidden="true">3.1.</strong> Client Endpoint</a></li></ol></li><li class="chapter-item expanded "><a href="../benchmarks/index.html"><strong aria-hidden="true">4.</strong> Benchmarks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../benchmarks/long_running.html"><strong aria-hidden="true">4.1.</strong> Long-running operation</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../installation/index.html"><strong aria-hidden="true">2.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../installation/binary_release.html"><strong aria-hidden="true">2.1.</strong> Binary Release</a></li><li class="chapter-item expanded "><a href="../installation/from_source.html"><strong aria-hidden="true">2.2.</strong> From Source</a></li><li class="chapter-item expanded "><a href="../installation/docker.html"><strong aria-hidden="true">2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../installation/kubernetes.html"><strong aria-hidden="true">2.4.</strong> Kubernetes</a></li></ol></li><li class="chapter-item expanded "><a href="../usage/index.html" class="active"><strong aria-hidden="true">3.</strong> Usage</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../usage/client_endpoint.html"><strong aria-hidden="true">3.1.</strong> Client Endpoint</a></li></ol></li><li class="chapter-item expanded "><a href="../benchmarks/index.html"><strong aria-hidden="true">4.</strong> Benchmarks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../benchmarks/long_running.html"><strong aria-hidden="true">4.1.</strong> Long-running operation</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,65 +144,18 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="kubernetes"><a class="header" href="#kubernetes">Kubernetes</a></h1>
-<p><em>Dolos</em> can be implemented as a standalone Kubernetes <code>StatefulSet</code> resource. </p>
-<p>Please note that the amount of replicas is set to <code>1</code>. <em>Dolos</em> doesn't have any kind of &quot;coordination&quot; between instances. Adding more than one replica will just create extra pipelines duplicating the same work.</p>
-<pre><code class="language-yaml">apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: dolos
-data:
-  daemon.toml: |-
-    [upstream]
-    # REDACTED: here goes your `upstream` configuration options
-
-    [rolldb]
-    # REDACTED: here goes your `rolldb` configuration options
----
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: dolos
-spec:
-  template:
-    spec:
-      containers:
-        - name: main
-          image: ghcr.io/txpipe/dolos:latest
-
-          # we mount the same volume that the main container uses as the source
-          # for the Cardano node unix socket.
-          volumeMounts:
-            - mountPath: /var/dolos/db
-              name: db
-            - mountPath: /etc/dolos
-              name: config
-          resources:
-            requests:
-              memory: 1Gi
-              cpu: 1
-            limits:
-              memory: 1Gi
-      volumes:
-        # an empty-dir to store your data. In a real scenario, this should be a PVC
-        - name: db
-          emptyDir: {}
-
-        # a config map resource with Dolos' config, particular for your requirements
-        - name: config
-          configMap:
-            name: config
-</code></pre>
+                        <h1 id="usage"><a class="header" href="#usage">Usage</a></h1>
+<p>This section provides information on how to use Dolos.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../installation/docker.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../installation/kubernetes.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../usage/index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../usage/client_endpoint.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -212,11 +165,11 @@ spec:
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../installation/docker.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../installation/kubernetes.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../usage/index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../usage/client_endpoint.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
